Working on landing page

--- a/timer-app/src/App.css
+++ b/timer-app/src/App.css
@@ -1,9 +1,9 @@
-body {
+/* body {
     background-color: #1e21d1;
     color: #eabf9f;
     height: vh;
     font-family: "Roboto-Mono", monospace;
-}
+} */
 
 #root {
     height: 100%;
